force-app/main/default/objects/Course_Module__c/fields/Baseline_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Grant_GST_Amount__c</fullName>
    <label>Baseline Grant GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>