force-app/main/default/objects/Course_Module__c/fields/Full_Fee__c.field-meta.xml
<CustomField>
    <fullName>Full_Fee__c</fullName>
    <label>Full Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>