force-app/main/default/objects/Course_Module__c/fields/Mid_Career_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mid_Career_GST_Amount__c</fullName>
    <label>Mid-Career GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>