force-app/main/default/objects/Course_Module__c/fields/Non_SME_Grant__c.field-meta.xml
<CustomField>
    <fullName>Non_SME_Grant__c</fullName>
    <label>Non-SME Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>