force-app/main/default/objects/Course_Module__c/fields/SME_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SME_Grant_GST_Amount__c</fullName>
    <label>SME Grant GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>