force-app/main/default/objects/Course_Module__c/fields/Workfare__c.field-meta.xml
<CustomField>
    <fullName>Workfare__c</fullName>
    <label>IBF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>