force-app/main/default/objects/Course_Module__c/fields/Workfare_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Workfare_GST_Amount__c</fullName>
    <label>IBF GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>