force-app/main/default/objects/Course_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Baseline_Grant__c</columns>
    <columns>Baseline_Grant_GST_Amount__c</columns>
    <columns>Course__c</columns>
    <columns>Full_Fee__c</columns>
    <columns>Full_Fee_GST_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Mid_Career__c</columns>
    <columns>Mid_Career_GST_Amount__c</columns>
    <columns>Module__c</columns>
    <columns>Non_SME_Grant__c</columns>
    <columns>Non_SME_Grant_GST_Amount__c</columns>
    <columns>SME_Grant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Module__c</field>
        <operation>contains</operation>
        <value>JOMAN</value>
    </filters>
    <label>All</label>
</ListView>